syntax = "proto3";

import "util/tracing/proto/tracing.proto";

option go_package = "sigmaos/apps/hotel/proto";

service Search {
  rpc Nearby(SearchReq) returns (SearchRep);
}

message SearchReq {
  float lat = 1;
  float lon = 2;
  string inDate = 3;
  string outDate = 4;
  SpanContextConfig spanContextConfig = 5;
}

message SearchRep {
  repeated string hotelIds = 1;
}
