syntax = "proto3";

option go_package = "sigmaos/kernelsrv/proto";

message BootRequest {
  string name = 1;
  repeated string args = 2;
}

message BootResult {
  string pidStr = 1;
}

message SetCPUSharesRequest {
  string PidStr = 1;
  int64 Shares = 2;
}

message SetCPUSharesResponse {
}

message AssignUprocdToRealmRequest {
  string pidStr = 1;
  string realmStr = 2;
  int64 procTypeInt = 3;
}

message AssignUprocdToRealmResponse {
}

message GetKernelSrvCPUUtilRequest {
  string PidStr = 1;
}

message GetKernelSrvCPUUtilResponse {
  double util = 1;
}

message ShutdownRequest {
}

message ShutdownResult {
}

message KillRequest {
  string name = 1;
}

message KillResult {
}

message PortRequest {
  string pidStr = 1;
  int32 port = 2;
}

message PortResult {
  int32 realmPort = 1;
  string hostIp = 3;
  int32 hostPort = 2;
}


